# AivisSpeech-Engine

./: .gitignore  README.md  pyproject.toml  run.py  run.spec
.github/: actionlint.yaml  pinact.yaml
.github/workflows/: build-engine-package.yml  build-engine.yml  sentry.yml  test-engine-container.yml  test-engine-package.yml  test.yml
api/: index.html
docs/: jp-bert-gguf-quantization.md  onnx-ggml-build.md  onnx-ggml-plugin-benchmark.md
docs/res/onnx-ggml-plugin-benchmark/: linux-780m-ggml.json  linux-intel-arc-openvino-native-split.json  linux-intel-arc-openvino-native.json  linux-rtx3060-cuda-ggml-cpu.json  macos-m1pro-metal-direct-decoder-20260702.json  macos-m1pro-metal-f32-appdefault.json  macos-m1pro-metal-f32-consistency.json  macos-m1pro-metal-fp16-appdefault.json  macos-m1pro-metal-fp16-consistency.json  windows-arc-b580-directml-ggml-cpu.json  windows-arc-b580-fp16-matrix.json
docs/res/onnx-ggml-plugin-benchmark/audio/linux-rtx3060/: onnx-cpu_long.m4a  onnx-cpu_medium.m4a  onnx-cpu_short.m4a  onnx-cuda_long.m4a  onnx-cuda_medium.m4a  onnx-cuda_short.m4a  onnx-ggml-vulkan-fp16_long.m4a  onnx-ggml-vulkan-fp32_long.m4a  onnx-ggml-vulkan-fp32_medium.m4a  onnx-ggml-vulkan-fp32_short.m4a  onnx-ggml-vulkan-jpbert-fp16-voices-fp16_long.m4a  onnx-ggml-vulkan-jpbert-fp16-voices-fp16_medium.m4a  onnx-ggml-vulkan-jpbert-fp16-voices-fp16_short.m4a  onnx-ggml-vulkan-jpbert-fp16-voices-fp32_long.m4a  onnx-ggml-vulkan-jpbert-fp16-voices-fp32_medium.m4a  onnx-ggml-vulkan-jpbert-fp16-voices-fp32_short.m4a  onnx-ggml-vulkan-jpbert-fp32-voices-fp16_long.m4a  onnx-ggml-vulkan-jpbert-fp32-voices-fp16_medium.m4a  onnx-ggml-vulkan-jpbert-fp32-voices-fp16_short.m4a  onnx-ggml-vulkan-jpbert-fp32-voices-fp32_long.m4a  onnx-ggml-vulkan-jpbert-fp32-voices-fp32_medium.m4a  onnx-ggml-vulkan-jpbert-fp32-voices-fp32_short.m4a  onnx-ggml-vulkan_long.m4a  onnx-ggml-vulkan_medium.m4a  onnx-ggml-vulkan_short.m4a
docs/res/onnx-ggml-plugin-benchmark/audio/macos-m1pro-metal-f32/: onnx-cpu_long.m4a  onnx-cpu_medium.m4a  onnx-cpu_short.m4a  onnx-ggml-metal_long.m4a  onnx-ggml-metal_medium.m4a  onnx-ggml-metal_short.m4a
docs/res/onnx-ggml-plugin-benchmark/audio/macos-m1pro-metal-fp16/: onnx-cpu_long.m4a  onnx-cpu_medium.m4a  onnx-cpu_short.m4a  onnx-ggml-metal_long.m4a  onnx-ggml-metal_medium.m4a  onnx-ggml-metal_short.m4a
experimental/android-ggml-mobile/: CMakeLists.txt  README.md
experimental/android-ggml-mobile/src/: aivis_ggml_mobile_bench.cpp  aivis_vulkan_coopmat_probe.cpp
experimental/onnxruntime-ep-aivis-ggml/: README.md  pyproject.toml
experimental/onnxruntime-ep-aivis-ggml/native/src/: aivis_ggml_onnx_ep.cc
experimental/onnxruntime-ep-aivis-ggml/src/onnxruntime_ep_aivis_ggml/: cache.py  gguf_writer.py  tts_cpp_mapping.py
resources/dictionaries/: 01_default.dic  01_naist-jdic-katakana.dic  01_wikitionary-accent.dic  01_wiktionary-accent.dic  02_genshin.dic  02_medic_dmime.dic  02_medic_orca.dic  02_msmed12.dic  02_mzime-name.dic  02_name-a10-mei.dic  02_name-a10-sei.dic  02_name-matsutake.dic  02_personal-name.dic  02_yojijukugo.dic  1-01_default.dic  1-03_unidic.dic  1-04_jp-accent-dic.dic  1-06_wiktionary-accent.dic  1-07_expressway-abbreviations.dic  1-08_place-accent-overrides.dic  2-01_sudachidict-small.dic  2-03_yojijukugo.dic  2-04_name-a10-sei.dic  2-05_name-a10-mei.dic  2-06_name-matsutake.dic  2-07_mzime-name.dic  2-09_place-names.dic  2-10_skk-jisyo-station.dic  2-11_skk-jisyo-jinmei.dic  2-12_skk-jisyo-law.dic  2-13_skk-jisyo-propernoun.dic  2-14_skk-jisyo.dic  2-15_o-dic.dic  2-16_genshin.dic  2-52_wiktionary.dic  3-04_medic-dmime.dic  3-05_medic-orca.dic  3-06_msmed12.dic
resources/engine_manifest_assets/: dependency_licenses.json  update_infos.json
test/e2e/: conftest.py
test/e2e/__snapshots__/test_openapi/: test_OpenAPIの形が変わっていないことを確認.json
test/e2e/single_api/aivm_models/: test_aivm_models.py
test/e2e/single_api/engine_info/__snapshots__/test_engine_manifest/: test_get_engine_manifest_200.json
test/e2e/single_api/speaker/: test_speaker_info.py  test_speakers.py
test/e2e/single_api/speaker/__snapshots__/test_speaker_info/: test_get_speaker_info_with_url_200.json
test/e2e/single_api/tts_pipeline/: test_accent_phrases.py  test_audio_query.py  test_multi_synthesis.py  test_synthesis.py
test/e2e/single_api/tts_pipeline/__snapshots__/test_accent_phrases/: test_post_accent_phrases_enable_katakana_english_200.json
test/e2e/single_api/tts_pipeline/__snapshots__/test_audio_query/: test_post_audio_query_enable_katakana_english_200.json
test/unit/: test_aivm_gguf_cache.py  test_onnx_ggml_tensor_mapping.py  test_run_onnx_provider.py
test/unit/tts_pipeline/: test_style_bert_vits2_tts_engine.py  test_tts_engine.py
test/unit/utility/: test_sentry_utility.py
tools/: benchmark_onnx_ggml_provider.py  benchmark_openvino_native.py  check_pr.bash  create_venv_and_generate_licenses.bash  export_mobile_ggml_bundle.py  generate_licenses.py  reproduce_onnx_ggml_benchmark.py
voicevox_engine/: aivm_gguf_cache.py  aivm_infos_repository.py  aivm_manager.py  logging.py  model.py
voicevox_engine/app/: openapi_schema.py
voicevox_engine/app/routers/: aivm_models.py  tts_pipeline.py
voicevox_engine/preset/: model.py
voicevox_engine/setting/: model.py
voicevox_engine/tts_pipeline/: model.py  style_bert_vits2_tts_engine.py
voicevox_engine/user_dict/: constants.py
voicevox_engine/utility/: aivishub_client.py  path_utility.py  sentry_utility.py  user_agent_utility.py
